added logo with position

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ FOOTER:
 Copyright on far left
 -->
 
+<header>
+	<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
+</header>
+
 
 </body>
 </html>
