established the header

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 <body>
 <!--
 HEADER:
-"Tea Cozy" logo on far left
-NAV items on far right
-(Header remains fixed with scrolling)
-bottom solid white border
+	"Tea Cozy" logo on far left
+	NAV items on far right
+	(Header remains fixed with scrolling)
+	bottom solid white border
 -->
-
 <!--
 Master Container: Contains 4 sub-containers:
 	I TOP Container: Contains 1 sub-container:
@@ -28,14 +27,20 @@ Master Container: Contains 4 sub-containers:
 	IV CONTACT Container: 0 sub-containers:
 		Contact information
 -->
-
 <!--
 FOOTER:
-Copyright on far left
+	Copyright on far left
 -->
 
 <header>
-	<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
+	<div id="logogrow">
+		<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
+	</div>
+	<nav>
+		<a class="nav" href="">Mission</a>
+		<a class="nav" href="">Featured Tea</a>
+		<a class="nav" href="">Locations</a>
+	</nav>
 </header>
 
 
