added body format and changed logogrow to logobox

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ FOOTER:
 -->
 
 <header>
-	<div id="logogrow">
+	<div id="logobox">
 		<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
 	</div>
 	<nav>
@@ -42,7 +42,6 @@ FOOTER:
 		<a class="nav" href="">Locations</a>
 	</nav>
 </header>
-
 
 </body>
 </html>
