created my main containers with temp labels

--- a/index.html
+++ b/index.html
@@ -44,8 +44,22 @@ FOOTER:
 </header>
 
 <div id="master-container" class="blocky">
+	<div id="top-container" class="blocky">
+		<p class="white">top container</p>
+	</div>
+	<div id="middle-container" class="blocky">
+		<p class="white">middle container</p>
+	</div>
+	<div id="bottom-container" class="blocky">
+		<p class="white">bottom container</p>
+	</div>
+	<div id="contacts-container" class="blocky">
+		<p class="white">contacts container</p>
+	</div>
+	<div id="copyright-container" class="blocky">
+		<p class="white">copyright</p>
+	</div>
 
 </div>
-<p class="white">test</p>
 </body>
 </html>
