with testing content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ HEADER:
 	"Tea Cozy" logo on far left
 	NAV items on far right
 	(Header remains fixed with scrolling)
-	bottom solid white border
+	bottom solid test border
 -->
 <!--
 Master Container: Contains 4 sub-containers:
@@ -45,19 +45,19 @@ FOOTER:
 
 <div id="master-container" class="blocky">
 	<div id="top-container" class="blocky">
-		<p class="white">top container</p>
+		<p class="test">top container</p>
 	</div>
 	<div id="middle-container" class="blocky">
-		<p class="white">middle container</p>
+		<p class="test">middle container</p>
 	</div>
 	<div id="bottom-container" class="blocky">
-		<p class="white">bottom container</p>
+		<p class="test">bottom container</p>
 	</div>
 	<div id="contacts-container" class="blocky">
-		<p class="white">contacts container</p>
+		<p class="test">contacts container</p>
 	</div>
 	<div id="copyright-container" class="blocky">
-		<p class="white">copyright</p>
+		<p class="test">copyright</p>
 	</div>
 
 </div>
