more content, added center attempts

--- a/index.html
+++ b/index.html
@@ -11,27 +11,36 @@
 		<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
 	</div>
 	<nav>
-		<a class="nav" href="">Mission</a>
-		<a class="nav" href="">Featured Tea</a>
-		<a class="nav" href="">Locations</a>
+		<a class="nav text" href="">Mission</a>
+		<a class="nav text" href="">Featured Tea</a>
+		<a class="nav text" href="">Locations</a>
 	</nav>
 </header>
 
 <div id="master-container" class="blocky">
 	<div id="top-container" class="blocky">
-		<p class="test">top container</p>
+		<p class="test">top container
+		</p>
 	</div>
 	<div id="middle-container" class="blocky">
-		<p class="test">middle container</p>
+	<div class="headliner">
+		<h2 class="text">Tea of the month
+		</h2>
+		<h4 class="text">What's Steeping at The Tea Cozy?
+		</h4>
+	</div>
 	</div>
 	<div id="bottom-container" class="blocky">
-		<p class="test">bottom container</p>
+		<p class="test">bottom container
+		</p>
 	</div>
 	<div id="contacts-container" class="blocky">
-		<p class="test">contacts container</p>
+		<p class="test">contacts container
+		</p>
 	</div>
 	<div id="copyright-container" class="blocky">
-		<p class="test">copyright</p>
+		<p class="test">copyright
+		</p>
 	</div>
 
 </div>
