applied some containing styles

--- a/index.html
+++ b/index.html
@@ -18,28 +18,40 @@
 </header>
 
 <div id="master-container" class="blocky">
+
 	<div id="top-container" class="blocky">
-		<p class="test">top container
 		</p>
-	</div>
-	<div id="middle-container" class="blocky">
-	<div class="headliner">
-		<h2 class="text">Tea of the month
-		</h2>
-		<h4 class="text">What's Steeping at The Tea Cozy?
+		<div class="headliner black-background">
+			<h2 class="text">Our Mission
+			</h2>
+			<h4 class="text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
 		</h4>
 	</div>
+	</div>
+	<div id="middle-container" class="blocky">
+		<div class="headliner">
+			<h2 class="text">Tea of the month
+			</h2>
+			<h4 class="text">What's Steeping at The Tea Cozy?
+			</h4>
+		</div>
 	</div>
 	<div id="bottom-container" class="blocky">
 		<p class="test">bottom container
 		</p>
 	</div>
 	<div id="contacts-container" class="blocky">
-		<p class="test">contacts container
+		<h2 class="text">The Tea Cozy
+		</h2>
+		<h5 class="text">
+			contact@theteacozy.com
+		</h5>
+		<p class="text">
+			917-555-8904
 		</p>
 	</div>
 	<div id="copyright-container" class="blocky">
-		<p class="test">copyright
+		<p class="text">copyright The Tea Cozy 2017
 		</p>
 	</div>
 
