just-in-case-update to start off morning

--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
 			</h2>
 			<h4 class="text">What's Steeping at The Tea Cozy?
 			</h4>
+		</div id="tea-of-month blocky">
+			<h4 class="text ">
+				<img class="tomimg" src="./resources/images/img-berryblitz.jpg">
+				Fall Berry Blitz Tea
+			</h4>
+			<h4 class="text ">
+				<img class="tomimg" src="./resources/images/img-spiced-rum.jpg">
+				Spiced Rum Tea
+			</h4>
+			<h4 class="text ">
+				<img class="tomimg" src="./resources/images/img-donut.jpg">
+				Seasonal Donuts
+			</h4>
+			<h4 class="text ">
+				<img class="tomimg" src="./resources/images/img-myrtle-ave.jpg">
+				Myrtle Ave Tea
+			</h4>
+			<h4 class="text ">
+				<img class="tomimg" src="./resources/images/img-bedford-bizarre.jpg">
+				Bedford Bizarre Tea
+			</h4>
+
+		<div>
+			
 		</div>
 	</div>
 	<div id="bottom-container" class="blocky">
@@ -58,17 +82,6 @@
 </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
 
 <!--
 HEADER:
