rearranged html, add body font fallback

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
-
+<!--Header-->
 <header>
 	<div id="logobox">
 		<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
@@ -16,9 +16,9 @@
 		<a class="nav text" href="">Locations</a>
 	</nav>
 </header>
-
+<!--Main Page Container-->
 <div id="master-container" class="blocky">
-
+	<!--Our Mission-->
 	<div id="top-container" class="blocky">
 		</p>
 		<div class="headliner black-background">
@@ -28,6 +28,7 @@
 		</h4>
 	</div>
 	</div>
+	<!--Tea of the Month-->
 	<div id="middle-container" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Tea of the month
@@ -55,11 +56,8 @@
 				<img class="tomimg" src="./resources/images/img-bedford-bizarre.jpg">
 				Bedford Bizarre Tea
 			</h4>
-
-		<div>
-			
-		</div>
 	</div>
+	<!--Contacts-->
 	<div id="bottom-container" class="blocky">
 		<p class="test">bottom container
 		</p>
@@ -74,6 +72,7 @@
 			917-555-8904
 		</p>
 	</div>
+	<!--Copyright-->
 	<div id="copyright-container" class="blocky">
 		<p class="text">copyright The Tea Cozy 2017
 		</p>
