facepalm: had h4s instead of divs

--- a/index.html
+++ b/index.html
@@ -35,27 +35,29 @@
 			</h2>
 			<h4 class="text">What's Steeping at The Tea Cozy?
 			</h4>
-		</div id="tea-of-month blocky">
-			<h4 class="text ">
-				<img class="tomimg" src="./resources/images/img-berryblitz.jpg">
-				Fall Berry Blitz Tea
-			</h4>
-			<h4 class="text ">
-				<img class="tomimg" src="./resources/images/img-spiced-rum.jpg">
-				Spiced Rum Tea
-			</h4>
-			<h4 class="text ">
-				<img class="tomimg" src="./resources/images/img-donut.jpg">
-				Seasonal Donuts
-			</h4>
-			<h4 class="text ">
-				<img class="tomimg" src="./resources/images/img-myrtle-ave.jpg">
-				Myrtle Ave Tea
-			</h4>
-			<h4 class="text ">
-				<img class="tomimg" src="./resources/images/img-bedford-bizarre.jpg">
-				Bedford Bizarre Tea
-			</h4>
+		</div>
+		<div id="tea-of-month blocky">
+			<div class="text ">
+				<img class="TOMimg" src="./resources/images/img-berryblitz.jpg">
+				<span>Fall Berry Blitz Tea</span>
+			</div>
+			<div class="text ">
+				<img class="TOMimg" src="./resources/images/img-spiced-rum.jpg">
+				<span>Spiced Rum Tea</span>
+			</div>
+			<div class="text ">
+				<img class="TOMimg" src="./resources/images/img-donut.jpg">
+				<span>Seasonal Donuts</span>
+			</div>
+			<div class="text ">
+				<img class="TOMimg" src="./resources/images/img-myrtle-ave.jpg">
+				<span>Myrtle Ave Tea</span>
+			</div>
+			<div class="text ">
+				<img class="TOMimg" src="./resources/images/img-bedford-bizarre.jpg">
+				<span>Bedford Bizarre Tea</span>
+			</div>
+		</div>
 	</div>
 	<!--Contacts-->
 	<div id="bottom-container" class="blocky">
