--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
 <body>
+
 <!--Header-->
 <header>
 	<div id="logobox">
-		<img id="tea-cozy-logo" src="./resources/images/img-tea-cozy-logo.png">
+		<img src="./resources/images/img-tea-cozy-logo.png">
 	</div>
 	<nav>
 		<a class="nav text" href="">Mission</a>
@@ -20,13 +21,12 @@
 <div id="master-container" class="blocky">
 	<!--Our Mission-->
 	<div id="top-container" class="blocky">
-		</p>
-		<div class="headliner black-background">
+		<div class="headliner">
 			<h2 class="text">Our Mission
 			</h2>
 			<h4 class="text">Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
 		</h4>
-	</div>
+		</div>
 	</div>
 	<!--Tea of the Month-->
 	<div id="middle-container" class="blocky">
@@ -59,11 +59,12 @@
 			</div>
 		</div>
 	</div>
-	<!--Contacts-->
+	<!--Locations-->
 	<div id="bottom-container" class="blocky">
 		<p class="test">bottom container
 		</p>
 	</div>
+	<!--Contacts-->
 	<div id="contacts-container" class="blocky">
 		<h2 class="text">The Tea Cozy
 		</h2>
