the middle container is out of wack

--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
 			</h4>
 		</div>
 		<div id="tea-of-month blocky">
-			<div class="text ">
-				<img class="TOMimg" src="./resources/images/img-berryblitz.jpg">
+			<div class="text item">
+				<img src="./resources/images/img-berryblitz.jpg">
 				<span>Fall Berry Blitz Tea</span>
 			</div>
-			<div class="text ">
-				<img class="TOMimg" src="./resources/images/img-spiced-rum.jpg">
+			<div class="text item">
+				<img src="./resources/images/img-spiced-rum.jpg">
 				<span>Spiced Rum Tea</span>
 			</div>
-			<div class="text ">
-				<img class="TOMimg" src="./resources/images/img-donut.jpg">
+			<div class="text item">
+				<img src="./resources/images/img-donut.jpg">
 				<span>Seasonal Donuts</span>
 			</div>
-			<div class="text ">
-				<img class="TOMimg" src="./resources/images/img-myrtle-ave.jpg">
+			<div class="text item">
+				<img src="./resources/images/img-myrtle-ave.jpg">
 				<span>Myrtle Ave Tea</span>
 			</div>
-			<div class="text ">
-				<img class="TOMimg" src="./resources/images/img-bedford-bizarre.jpg">
+			<div class="text item">
+				<img src="./resources/images/img-bedford-bizarre.jpg">
 				<span>Bedford Bizarre Tea</span>
 			</div>
 		</div>
 	</div>
 	<!--Locations-->
-	<div id="bottom-container" class="blocky">
-		<p class="test">bottom container
+	<div id="botitem-container" class="blocky">
+		<p class="test">botitem container
 		</p>
 	</div>
 	<!--Contacts-->
@@ -90,18 +90,18 @@ HEADER:
 	"Tea Cozy" logo on far left
 	NAV items on far right
 	(Header remains fixed with scrolling)
-	bottom solid test border
+	botitem solid test border
 -->
 <!--
 Master Container: Contains 4 sub-containers:
 	I TOP Container: Contains 1 sub-container:
 		i OUR MISSION Container
 	II MIDDLE Container: 6 sub-containers:
-		(WIP: I am deciding how to best implement this container; it appears to be one centered top container and 5 centered, flex-wrapped bottom containers)
+		(WIP: I am deciding how to best implement this container; it appears to be one centered top container and 5 centered, flex-wrapped botitem containers)
 		i TEA OF THE MONTH container
 		ii-vi pictures with captions
-	III BOTTOM Container: 4 sub-containers:
-		(WIP: appears to be 1 top container and 3 space-between bottom containers with exact margins)
+	III BOTitem Container: 4 sub-containers:
+		(WIP: appears to be 1 top container and 3 space-between botitem containers with exact margins)
 		i LOCATIONS container
 		ii-iv Location infos
 	IV CONTACT Container: 0 sub-containers:
