pausing on middle container to work on bottom

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 	</div>
 	<!--Locations-->
-	<div id="botitem-container" class="blocky">
+	<div id="bottom-container" class="blocky">
 		<p class="test">botitem container
 		</p>
 	</div>
