did I change anything

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Main Page Container-->
 <div id="master-container" class="blocky">
 	<!--Our Mission-->
-	<div id="top-container" class="blocky">
+	<div id="mission" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Our Mission
 			</h2>
@@ -61,8 +61,10 @@
 	</div>
 	<!--Locations-->
 	<div id="bottom-container" class="blocky">
-		<p class="test">botitem container
-		</p>
+		<div class="headliner">
+			<h2 class="text black-background">Locations
+			</h2>
+		</div>
 	</div>
 	<!--Contacts-->
 	<div id="contacts-container" class="blocky">
