brain turning to mush, maybe I should stop for now

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Main Page Container-->
 <div id="master-container" class="blocky">
 	<!--Our Mission-->
-	<div id="mission" class="blocky">
+	<div id="top-container" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Our Mission
 			</h2>
@@ -62,8 +62,11 @@
 	<!--Locations-->
 	<div id="bottom-container" class="blocky">
 		<div class="headliner">
-			<h2 class="text black-background">Locations
+			<h2 class="text">Locations
 			</h2>
+		</div>
+		<div>
+			
 		</div>
 	</div>
 	<!--Contacts-->
