couldn't read it well, now I can

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Main Page Container-->
 <div id="master-container" class="blocky">
 	<!--Our Mission-->
-	<div id="top-container" class="blocky">
+	<div id="mission" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Our Mission
 			</h2>
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 	<!--Tea of the Month-->
-	<div id="middle-container" class="blocky">
+	<div id="steeping" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Tea of the month
 			</h2>
@@ -60,7 +60,7 @@
 		</div>
 	</div>
 	<!--Locations-->
-	<div id="bottom-container" class="blocky">
+	<div id="locations" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Locations
 			</h2>
@@ -70,7 +70,7 @@
 		</div>
 	</div>
 	<!--Contacts-->
-	<div id="contacts-container" class="blocky">
+	<div id="contacts" class="blocky">
 		<h2 class="text">The Tea Cozy
 		</h2>
 		<h5 class="text">
@@ -81,7 +81,7 @@
 		</p>
 	</div>
 	<!--Copyright-->
-	<div id="copyright-container" class="blocky">
+	<div id="copyright" class="blocky">
 		<p class="text">copyright The Tea Cozy 2017
 		</p>
 	</div>
