final approach, but I may have made a fundamental error early, going to try to unfuck myself by altering early code, here we go...

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--TEA COZY PROJECT (UNIT 4)-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,14 +30,14 @@
 		</div>
 	</div>
 	<!--Tea of the Month-->
-	<div id="steeping" class="blocky">
+	<div id="tea-of-month" class="blocky">
 		<div class="headliner">
 			<h2 class="text">Tea of the month
 			</h2>
 			<h4 class="text">What's Steeping at The Tea Cozy?
 			</h4>
 		</div>
-		<div id="tea-of-month blocky">
+		<div id="teatypes blocky">
 			<div class="text item">
 				<img src="./resources/images/img-berryblitz.jpg">
 				<span>Fall Berry Blitz Tea</span>
@@ -64,6 +65,9 @@
 		<div class="headliner">
 			<h2 class="text">Locations
 			</h2>
+		</div>
+		<div>
+			
 		</div>
 		<div>
 			
