fixed tea wrap with inspected DevTools

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<h4 class="text">What's Steeping at The Tea Cozy?
 			</h4>
 		</div>
-		<div id="teatypes blocky">
+		<div class="flex-container">
 			<div class="text item">
 				<img src="./resources/images/img-berryblitz.jpg">
 				<span>Fall Berry Blitz Tea</span>
