removed headliner from locations div, may remove div; imported properties from example CSS -- at this point it's a valuable learning experience, and I did cite it in the code

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	</nav>
 </header>
 <!--Main Page Container-->
-<div id="master-container" class="blocky">
+<div id="master-container" class="">
 	<!--Our Mission-->
-	<div id="mission" class="blocky">
+	<div id="mission" class="">
 		<div class="headliner">
 			<h2 class="text">Our Mission
 			</h2>
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<!--Tea of the Month-->
-	<div id="tea-of-month" class="blocky">
+	<div id="tea-of-month" class="">
 		<div class="headliner">
 			<h2 class="text">Tea of the month
 			</h2>
@@ -61,20 +61,49 @@
 		</div>
 	</div>
 	<!--Locations-->
-	<div id="locations" class="blocky">
-		<div class="headliner">
+	<div id="locations" class="">
+		<div class="">
 			<h2 class="text">Locations
 			</h2>
 		</div>
-		<div>
-			
-		</div>
-		<div>
-			
+		<div class="flex-container">
+			<div class="location">
+				<h3 class="text">Downtown
+				</h3>
+          <p class="text">384 West 4th St
+          </p>
+          <p class="text">Suite 108
+          </p>
+          <p class="text">Portland, Maine
+          </p>
+        </div>
+        <div class="location">
+          <h3 class="text">East Bayside
+          </h3>
+          <p class="text">3433 Phisherman's Avenue
+          </p>
+          <p class="text">(Northwest Corner)
+          </p>
+          <p class="text">Portland, Maine
+          </p>
+        </div>
+        <div class="location">
+          <h3 class="text">Oakdale
+          </h3>
+          <p class="text">515 Crescent Avenue
+          </p>
+          <p class="text">Second Floor
+          </p>
+          <p class="text">Portland, Maine
+          </p>
+			</div>
+			<div>
+				
+			</div>
 		</div>
 	</div>
 	<!--Contacts-->
-	<div id="contacts" class="blocky">
+	<div id="contacts" class="">
 		<h2 class="text">The Tea Cozy
 		</h2>
 		<h5 class="text">
@@ -85,7 +114,7 @@
 		</p>
 	</div>
 	<!--Copyright-->
-	<div id="copyright" class="blocky">
+	<div id="copyright" class="">
 		<p class="text">copyright The Tea Cozy 2017
 		</p>
 	</div>
