This should be it, time for feedback

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 		</p>
 	</div>
 	<!--Copyright-->
-	<div id="copyright" class="">
+	<footer>
 		<p class="text">copyright The Tea Cozy 2017
 		</p>
-	</div>
+	</footer>
 
 </div>
 </body>
